--- a/templates/index.html
+++ b/templates/index.html
@@ -6,36 +6,17 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.80.0">
-    <title>Podcast API</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
-
-    
-
+    <title>Shuffle: Playlist PLayer</title>
+    <link rel="stylesheet" href="../static/css/main.css">
+    <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/"> -->
     <!-- Bootstrap core CSS -->
-<link href="../static/assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-    
+  <!-- <link href="../static/assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
   </head>
+
+
   <body>
     
-<header>
+<!-- <header>
   <div class="collapse bg-dark" id="navbarHeader">
     <div class="container">
       <div class="row">
@@ -65,18 +46,18 @@
       </button>
     </div>
   </div>
-</header>
+</header> -->
 
 <main>
 
   <section class="py-5 text-center container">
-    <div class="row py-lg-5">
+    <div id="header-1" class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Podcast API</h1>
-        <p class="lead text-muted">Welcome to my Podcast API, this project was created to teach myself of the basic workings of an API using flask.</p>
+        <h1 id="a" class="fw-light">Playlist API</h1>
+        <p class="lead text-muted">Welcome to my Playlist API, this project was created to teach myself of the basic workings of an API using flask.</p>
         <p>
           <a href="/" class="btn btn-primary my-2">Reload Page</a>
-          <a href="#" class="btn btn-secondary my-2">Add A Podcast</a>
+          <a href="#" class="btn btn-secondary my-2">Add A Playlist</a>
         </p>
       </div>
     </div>
@@ -89,8 +70,9 @@
         {% for key, episode in episodes.items() %}
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+        
+            <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
+            <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/za/playlist/night-drives-on-the-highway/pl.u-leyl1q6hjKgdKLd"></iframe>
             <div class="card-body">
               <h4>{{episode['episode_name']}}</h4>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
